--- a/package.json
+++ b/package.json
@@ -3,45 +3,115 @@
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
-    "start": "expo start",
+    "start": "npx expo start -c",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "npx expo run:android",
+    "ios": "npx expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
-    "lint": "expo lint"
+    "lint": "npx expo lint .",
+    "precommit": "lint-staged",
+    "eslint-check": "eslint --print-config .eslintrc.js | eslint-config-prettier-check"
+  },
+  "lint-staged": {
+    "*.ts,*.tsx": [
+      "prettier --write",
+      "git add"
+    ]
   },
   "jest": {
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+    "@expo/config-plugins": "~8.0.0",
+    "@expo/metro-config": "~0.18.1",
     "@expo/vector-icons": "^14.0.2",
-    "@react-navigation/native": "^6.0.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/hooks": "^3.0.0",
+    "@react-native-google-signin/google-signin": "^12.2.1",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/stack": "^6.4.0",
+    "apollo-boost": "^0.4.9",
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-client": "^2.6.10",
+    "apollo-link-context": "^1.0.20",
+    "apollo-link-http": "^1.5.17",
+    "axios": "^1.7.2",
+    "babel-plugin-module-resolver": "^5.0.2",
+    "babel-plugin-react-docgen-typescript": "^1.5.1",
+    "dayjs": "^1.11.11",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-prettier": "^5.0.0",
     "expo": "~51.0.20",
+    "expo-auth-session": "~5.5.2",
     "expo-constants": "~16.0.2",
+    "expo-dev-client": "~4.0.20",
     "expo-font": "~12.0.8",
     "expo-linking": "~6.3.1",
+    "expo-random": "~14.0.1",
     "expo-router": "~3.5.18",
+    "expo-secure-store": "~13.0.1",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
+    "expo-tracking-transparency": "~4.0.2",
+    "expo-updates": "~0.25.17",
     "expo-web-browser": "~13.0.3",
+    "graphql": "^16.8.2",
+    "graphql-tag": "^2.12.6",
+    "install": "^0.13.0",
     "react": "18.2.0",
+    "react-apollo": "^3.1.5",
     "react-dom": "18.2.0",
     "react-native": "0.74.3",
+    "react-native-animatable": "^1.4.0",
+    "react-native-calendars": "^1.1305.0",
+    "react-native-fbsdk-next": "^13.0.0",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-reanimated": "~3.10.1",
+    "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10"
+    "react-native-svg": "15.2.0",
+    "react-native-svg-transformer": "^1.4.0",
+    "react-native-ui-datepicker": "^2.0.3",
+    "react-native-url-polyfill": "^2.0.0",
+    "react-native-vector-icons": "^10.1.0",
+    "react-native-web": "~0.19.10",
+    "react-navigation": "^5.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
+    "@babel/core": "^7.24.8",
+    "@babel/eslint-parser": "^7.24.8",
+    "@expo/metro-runtime": "~3.2.1",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.7",
-    "jest": "^29.2.1",
+    "@typescript-eslint/eslint-plugin": "~5.24.0",
+    "@typescript-eslint/parser": "~5.24.0",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.2.3",
+    "babel-plugin-react-docgen-typescript": "^1.5.1",
+    "babel-plugin-react-native-web": "^0.19.10",
+    "cross-env": "^7.0.3",
+    "eslint": "^9.6.0",
+    "eslint-config-next": "12.1.6",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-cypress": "^2.10.3",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-jsx-a11y": "6.5.1",
+    "eslint-plugin-react": "7.30.0",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "husky": "^9.0.11",
+    "jest": "^29.7.0",
     "jest-expo": "~51.0.3",
+    "lint-staged": "^15.2.7",
+    "prettier": "^3.3.2",
+    "react-devtools": "^5.2.0",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
   },
