--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "android": "npx expo run:android",
     "ios": "npx expo run:ios",
     "web": "expo start --web",
-    "test": "jest --watchAll",
     "lint": "npx expo lint .",
     "precommit": "lint-staged",
-    "eslint-check": "eslint --print-config .eslintrc.js | eslint-config-prettier-check"
+    "eslint-check": "eslint --print-config .eslintrc.js | eslint-config-prettier-check",
+    "test": "jest --coverage",
+    "test:coverage": "jest --coverage --coverageReporters=json-summary"
   },
   "lint-staged": {
     "*.ts,*.tsx": [
@@ -20,7 +21,12 @@
     ]
   },
   "jest": {
-    "preset": "jest-expo"
+    "preset": "jest-expo",
+    "coverageDirectory": "coverage",
+    "coverageReporters": [
+      "json-summary",
+      "text"
+    ]
   },
   "dependencies": {
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
