--- a/.github/workflows/test-coverage.yml
+++ b/.github/workflows/test-coverage.yml
@@ -72,8 +72,8 @@ jobs:
         uses: schneegans/dynamic-badges-action@v1.7.0
         with:
           auth: ${{ secrets.GIST_SECRET }}
-          gistID: e04391666c750dca674813599d57f0e5
-          filename: pet-pamper-client.json
+          gistID: c2e9f577c2e450b31f425bdd0dde2759
+          filename: pet-pamper-client-coverage.json
           label: Coverage
           message: ${{ steps.coverageComment.outputs.coverage }}
           color: ${{ steps.coverageComment.outputs.color }}
