--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,10 +1,15 @@
 name: Lint
 
 on:
-  push:
-    branches: [main, develop]
   pull_request:
-    branches: [main, develop]
+    types: [opened, synchronize, edited, reopened]
+    branches:
+      - main
+      - develop
+      - task/**
+  push:
+    branches:
+      - main
 
 jobs:
   eslint:
