--- a/package.json
+++ b/package.json
@@ -48,11 +48,11 @@
     "dayjs": "^1.11.11",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-prettier": "^5.0.0",
-    "expo": "^51.0.21",
+    "expo": "~51.0.22",
     "expo-auth-session": "~5.5.2",
     "expo-constants": "~16.0.2",
     "expo-dev-client": "~4.0.20",
-    "expo-font": "~12.0.8",
+    "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
     "expo-random": "~14.0.1",
     "expo-router": "~3.5.18",
@@ -61,7 +61,7 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-tracking-transparency": "~4.0.2",
-    "expo-updates": "~0.25.17",
+    "expo-updates": "~0.25.21",
     "expo-web-browser": "~13.0.3",
     "graphql": "^16.8.2",
     "graphql-tag": "^2.12.6",
@@ -76,7 +76,7 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-reanimated": "~3.10.1",
     "react-native-reanimated-carousel": "^3.5.1",
-    "react-native-safe-area-context": "4.10.1",
+    "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
     "react-native-svg-transformer": "^1.4.0",
@@ -94,14 +94,15 @@
     "@types/react": "~18.2.45",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.7",
-    "@typescript-eslint/eslint-plugin": "~5.24.0",
-    "@typescript-eslint/parser": "~5.24.0",
+    "@typescript-eslint/eslint-plugin": "^7.17.0",
+    "@typescript-eslint/parser": "^7.17.0",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.3",
     "babel-plugin-react-docgen-typescript": "^1.5.1",
     "babel-plugin-react-native-web": "^0.19.10",
     "cross-env": "^7.0.3",
-    "eslint": "^9.6.0",
+    "eslint": "^9.7.0",
+    "eslint-config-expo": "^7.0.0",
     "eslint-config-next": "12.1.6",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-react-app": "^7.0.1",
@@ -117,7 +118,7 @@
     "prettier": "^3.3.2",
     "react-devtools": "^5.2.0",
     "react-test-renderer": "18.2.0",
-    "typescript": "~5.3.3"
+    "typescript": "4.6.4"
   },
   "private": true,
   "resolutions": {
