--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
     "ios": "npx expo run:ios",
     "web": "expo start --web",
     "lint": "npx expo lint .",
+    "lint:fix": "npx expo lint --fix",
     "precommit": "lint-staged",
-    "eslint-check": "eslint --print-config .eslintrc.js | eslint-config-prettier-check",
-    "test": "jest --coverage",
-    "test:coverage": "jest --coverage --coverageReporters=json-summary"
+    "test": "jest --coverage"
   },
   "lint-staged": {
     "*.ts,*.tsx": [
@@ -47,8 +46,9 @@
     "babel-plugin-react-docgen-typescript": "^1.5.1",
     "dayjs": "^1.11.11",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-plugin-prettier": "^5.0.0",
-    "expo": "~51.0.22",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react-native": "^4.1.0",
+    "expo": "^51.0.22",
     "expo-auth-session": "~5.5.2",
     "expo-constants": "~16.0.2",
     "expo-dev-client": "~4.0.20",
@@ -89,6 +89,7 @@
   "devDependencies": {
     "@babel/core": "^7.24.8",
     "@babel/eslint-parser": "^7.24.8",
+    "@eslint/eslintrc": "^1.1.0",
     "@expo/metro-runtime": "~3.2.1",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
@@ -101,8 +102,8 @@
     "babel-plugin-react-docgen-typescript": "^1.5.1",
     "babel-plugin-react-native-web": "^0.19.10",
     "cross-env": "^7.0.3",
-    "eslint": "^9.7.0",
-    "eslint-config-expo": "^7.0.0",
+    "eslint": "^8.51.0",
+    "eslint-config-expo": "^7.1.2",
     "eslint-config-next": "12.1.6",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-react-app": "^7.0.1",
@@ -115,10 +116,10 @@
     "jest": "^29.7.0",
     "jest-expo": "~51.0.3",
     "lint-staged": "^15.2.7",
-    "prettier": "^3.3.2",
+    "prettier": "^3.3.3",
     "react-devtools": "^5.2.0",
     "react-test-renderer": "18.2.0",
-    "typescript": "4.6.4"
+    "typescript": "~5.3.3"
   },
   "private": true,
   "resolutions": {
