--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -41,7 +41,7 @@ jobs:
         run: yarn lint
 
       - name: Run Prettier Check
-        run: yarn prettier --check .
+        run: yarn prettier --check ./app
 
       - name: Run TypeScript Check
         run: yarn tsc --noEmit
