--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -49,16 +49,18 @@ jobs:
       - name: Run Tests
         run: yarn test
 
-      - name: Update README with Lint Badge
-        run: |
-          BADGE="![Lint](https://github.com/namtc07/pet-pamper-client/actions/workflows/lint.yml/badge.svg?branch=main)"
-          sed -i "s|!\[Lint\](https://github.com/namtc07/pet-pamper-client/actions/workflows/lint.yml/badge.svg?branch=main)|$BADGE|g" README.md
+      - name: Run ESLint on changed files
+        id: eslint
+        run: npx eslint --no-error-on-unmatched-pattern $(git diff --diff-filter=d --name-only origin/${{ github.event.pull_request.base.ref }}... -- . ":(exclude)**/test-coverage*" | grep -E '\.(js|jsx)$' | xargs || echo "")
 
-      - name: Commit changes
-        if: github.ref == 'refs/heads/main'
-        run: |
-          git config --global user.name 'github-actions[bot]'
-          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-          git add README.md
-          git commit -m "Update Lint badge status in README"
-          git push
+      - name: Create comment if there are errors
+        if: failure()
+        uses: actions/github-script@v6
+        with:
+          script: |
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: 'Lint error!'
+            })
