--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "ios": "npx expo run:ios",
     "web": "expo start --web",
     "lint": "npx expo lint .",
-    "lint:fix": "npx expo lint --fix",
+    "lint:fix": "npx expo eslint . --fix",
     "precommit": "lint-staged",
-    "test": "jest --coverage"
+    "test": "jest --coverage",
+    "storybook-generate": "sb-rn-get-stories",
+    "storybook-watch": "sb-rn-watcher",
+    "storybook:web": "storybook dev --config-dir .storybook/web -p 6006",
+    "build-storybook": "storybook build"
   },
   "lint-staged": {
     "*.ts,*.tsx": [
@@ -55,7 +59,7 @@
     "expo-linking": "~6.3.1",
     "expo-random": "~14.0.1",
     "expo-router": "~3.5.18",
-    "expo-secure-store": "~13.0.1",
+    "expo-secure-store": "~13.0.2",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
@@ -68,7 +72,7 @@
     "react": "18.2.0",
     "react-apollo": "^3.1.5",
     "react-dom": "18.2.0",
-    "react-native": "^0.74.3",
+    "react-native": "0.74.3",
     "react-native-animatable": "^1.4.0",
     "react-native-calendars": "^1.1305.0",
     "react-native-gesture-handler": "~2.16.1",
@@ -86,12 +90,28 @@
     "react-navigation": "^5.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.8",
+    "@babel/core": "^7.24.0",
     "@babel/eslint-parser": "^7.24.8",
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+    "@chromatic-com/storybook": "^1",
     "@eslint/eslintrc": "^1.1.0",
     "@expo/metro-runtime": "~3.2.1",
+    "@react-native-async-storage/async-storage": "^1.19.0",
+    "@react-native-community/datetimepicker": "8.0.1",
+    "@react-native-community/slider": "4.5.2",
+    "@storybook/addon-actions": "^8.2.6",
+    "@storybook/addon-controls": "^8.2.6",
+    "@storybook/addon-essentials": "^8.2.6",
+    "@storybook/addon-links": "^8.2.6",
+    "@storybook/addon-ondevice-actions": "^7.6.20",
+    "@storybook/addon-ondevice-controls": "^7.6.20",
+    "@storybook/addon-react-native-web": "^0.0.24",
+    "@storybook/addon-webpack5-compiler-babel": "^3.0.3",
+    "@storybook/react": "^8.2.6",
+    "@storybook/react-native": "^7.6.20",
+    "@storybook/react-webpack5": "^8.2.6",
     "@types/jest": "^29.5.12",
-    "@types/react": "~18.2.45",
+    "@types/react": "~18.2.79",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.7",
     "@typescript-eslint/eslint-plugin": "^7.17.0",
@@ -112,19 +132,31 @@
     "eslint-plugin-react": "7.30.0",
     "eslint-plugin-react-hooks": "4.6.0",
     "husky": "^9.0.11",
-    "jest": "^29.7.0",
-    "jest-expo": "~51.0.3",
+    "jest": "^29.4.0",
+    "jest-expo": "^51.0.0",
     "lint-staged": "^15.2.7",
+    "metro-react-native-babel-preset": "^0.77.0",
     "prettier": "^3.3.3",
     "react-devtools": "^5.2.0",
     "react-test-renderer": "18.2.0",
+    "storybook": "^8.2.6",
     "typescript": "~5.3.3"
   },
-  "private": true,
+  "expo": {
+    "install": {
+      "exclude": [
+        "@react-native-async-storage/async-storage",
+        "@react-native-community/datetimepicker"
+      ]
+    }
+  },
   "resolutions": {
-    "react-docgen-typescript": "2.2.2"
+    "react-docgen-typescript": "2.2.2",
+    "@storybook/react-docgen-typescript-plugin": "1.0.6--canary.9.cd77847.0"
   },
   "overrides": {
-    "react-docgen-typescript": "2.2.2"
-  }
+    "react-docgen-typescript": "2.2.2",
+    "@storybook/react-docgen-typescript-plugin": "1.0.6--canary.9.cd77847.0"
+  },
+  "private": true
 }
