--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "ios": "npx expo run:ios",
     "web": "expo start --web",
     "lint": "npx expo lint .",
-    "lint:fix": "npx expo eslint . --fix",
+    "lint:fix": "npx expo eslint --fix --ext ts,tsx",
     "precommit": "lint-staged",
     "test": "jest --coverage",
     "storybook-generate": "sb-rn-get-stories",
     "storybook-watch": "sb-rn-watcher",
     "storybook:web": "storybook dev --config-dir .storybook/web -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build --config-dir .storybook/web",
+    "chromatic": "npx chromatic --project-token=chpt_1d867511fb96aba"
   },
   "lint-staged": {
     "*.ts,*.tsx": [
@@ -120,6 +121,7 @@
     "babel-loader": "^8.2.3",
     "babel-plugin-react-docgen-typescript": "^1.5.1",
     "babel-plugin-react-native-web": "^0.19.10",
+    "chromatic": "^11.5.6",
     "cross-env": "^7.0.3",
     "eslint": "^8.51.0",
     "eslint-config-expo": "^7.1.2",
