--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "axios": "^1.7.2",
     "babel-plugin-module-resolver": "^5.0.2",
     "babel-plugin-react-docgen-typescript": "^1.5.1",
+    "babel-plugin-react-native-classname-to-style": "^1.2.2",
+    "babel-plugin-react-native-platform-specific-extensions": "^1.1.1",
     "dayjs": "^1.11.11",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-prettier": "^5.2.1",
@@ -70,6 +72,7 @@
     "graphql": "^16.8.2",
     "graphql-tag": "^2.12.6",
     "install": "^0.13.0",
+    "node-sass": "^9.0.0",
     "react": "18.2.0",
     "react-apollo": "^3.1.5",
     "react-dom": "18.2.0",
@@ -81,6 +84,7 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "4.10.5",
+    "react-native-sass-transformer": "^3.0.0",
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
     "react-native-svg-transformer": "^1.4.0",
@@ -140,6 +144,7 @@
     "metro-react-native-babel-preset": "^0.77.0",
     "prettier": "^3.3.3",
     "react-devtools": "^5.2.0",
+    "react-native-typed-sass-transformer": "^0.11.0",
     "react-test-renderer": "18.2.0",
     "storybook": "^8.2.6",
     "typescript": "~5.3.3"
