--- a/package.json
+++ b/package.json
@@ -72,7 +72,6 @@
     "graphql": "^16.8.2",
     "graphql-tag": "^2.12.6",
     "install": "^0.13.0",
-    "node-sass": "^9.0.0",
     "react": "18.2.0",
     "react-apollo": "^3.1.5",
     "react-dom": "18.2.0",
@@ -84,7 +83,6 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "4.10.5",
-    "react-native-sass-transformer": "^3.0.0",
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
     "react-native-svg-transformer": "^1.4.0",
@@ -92,7 +90,8 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.10",
-    "react-navigation": "^5.0.0"
+    "react-navigation": "^5.0.0",
+    "styled-components": "^6.1.12"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
@@ -144,7 +143,6 @@
     "metro-react-native-babel-preset": "^0.77.0",
     "prettier": "^3.3.3",
     "react-devtools": "^5.2.0",
-    "react-native-typed-sass-transformer": "^0.11.0",
     "react-test-renderer": "18.2.0",
     "storybook": "^8.2.6",
     "typescript": "~5.3.3"
@@ -159,7 +157,8 @@
   },
   "resolutions": {
     "react-docgen-typescript": "2.2.2",
-    "@storybook/react-docgen-typescript-plugin": "1.0.6--canary.9.cd77847.0"
+    "@storybook/react-docgen-typescript-plugin": "1.0.6--canary.9.cd77847.0",
+    "styled-components": "^5"
   },
   "overrides": {
     "react-docgen-typescript": "2.2.2",
