--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "@react-native-community/hooks": "^3.0.0",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.4.0",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^12.5.1",
     "apollo-boost": "^0.4.9",
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-client": "^2.6.10",
@@ -137,7 +139,7 @@
     "eslint-plugin-react": "7.30.0",
     "eslint-plugin-react-hooks": "4.6.0",
     "husky": "^9.0.11",
-    "jest": "^29.4.0",
+    "jest": "^29.7.0",
     "jest-expo": "^51.0.0",
     "lint-staged": "^15.2.7",
     "metro-react-native-babel-preset": "^0.77.0",
